--- a/tutorial_3/makefile
+++ b/tutorial_3/makefile
@@ -1,32 +1,35 @@
-CC := clang
-CFLAGS := -Wall -Wextra -std=c99
-CPPFLAGS:= 
-LFLAGS = 
-LIBS := -lm
-SOURCES := question1.c question2.c question3.c question4.c question5.c
-OBJECTS := $(subst .c,.o,$(SOURCES))
-BIN = question1 question2 question3 question4 question5
-.PHONY: clean all default
+.SUFFIXES: .c
+.PHONY : default all clean
 
+# the compiler: gcc for C program, define as g++ for C++
+CC = clang
+OBJECTS := $(subst .c,.o,$(SOURCES))
+BIN = question_1 question_2 question_3 question_4 question_5
+# LIBS := -lm 
+LDFLAGS := -lm
+
+
+
+  # compiler flags:
+  #  -g    adds debugging information to the executable file
+  #  -Wall turns on most, but not all, compiler warnings
+  #  -Wextra 
+CFLAGS  = -Wall -Wextra -std=gnu99
+
+# shiet -std=c99 changed to -std=gnu99 <----
+
+#   # the build target executable:
 default : all
 
-all : $(BIN)
+all : question_1 question_2 question_3 question_4 question_5
 
-question1 : question1.o
-	$(CC) -o question1 question1.o 
+% : %.o
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@ 
 
-question2 : question2.o
-	$(CC) -o question2 question2.o 
-
-question3 : question3.o
-	$(CC) -o question3 question3.o 
-
-question4 : question4.o
-	$(CC) -o question4 question4.o 
-
-question5 : question5.o
-	$(CC) -lm -o question5 question5.o
+%.o : %.c
+	$(CC) $(CFLAGS) -c $< 
 
 
-clean:
-	rm -f $(OBJECTS) $(BIN) *~
+clean :
+	rm -f $(OBJECTS) $(BIN) *.o *~
+
