--- a/tutorial_8/makefile
+++ b/tutorial_8/makefile
@@ -1,9 +1,10 @@
 CC := clang
 CFLAGS := -std=gnu99 -Wall
-SOURCES := question2.c question1.c
-DEPS =
-# OBJECTS := $(subst .c,.o,$(SOURCES))
-BIN := question2 question1 process
+SOURCES := question2.c question1.c queue.c
+DEPS = queue.o
+OBJECTS := $(subst .c,.o,$(SOURCES)) queue.o
+BIN := question2 question1 process 
+
 .PHONY: clean all
 
 all : $(BIN)
@@ -11,7 +12,7 @@ all : $(BIN)
 process : sigtrap.c
 	clang -std=gnu99 $< -o $@
 
-% : %.o
+% : %.o $(DEPS)
 	$(CC) $(DEPS) $(CFLAGS) $< -o $@
 
 %.o : %.c
